tests/errors/maskl_incorrect_bit_size.f90
program maskl_incorrect_bit_size
   print*, maskl(63)
end program
